[package]
name = "motion-patch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"], optional = true }
hash40 = "1.3.0"
motion_list_rs = "1.5.0"
serde = { version = "1.0.170", features = ["derive"] }
serde_yaml = "0.9.22"
toml = "0.7.6"

[features]
cli = ["clap"]
